--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "@vue/cli-plugin-eslint": "^4.1.2",
     "@vue/cli-service": "^4.1.2",
     "babel-eslint": "^10.1.0",
+    "css-loader": "^0.28.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "less": "^4.1.3",
+    "less-loader": "^4.1.0",
+    "vue-loader": "^13.3.0",
+    "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
