--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-ui": "^2.15.9",
+    "lodash": "^4.17.21",
     "vue": "^2.6.11",
     "vue-router": "3"
   },
@@ -23,6 +24,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "less": "^4.1.3",
     "less-loader": "^4.1.0",
+    "markdown-it": "^13.0.1",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.6.11"
