--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "element-ui": "^2.15.9",
     "lodash": "^4.17.21",
     "vue": "^2.6.11",
-    "vue-router": "3"
+    "vue-router": "3",
+    "vuex": "3",
+    "axios": "^0.27.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.2",
